--- a/package.json
+++ b/package.json
@@ -3,32 +3,46 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev --envName production",
+    "build:scripts": "tsc scripts/*.ts --outDir dist/scripts --esModuleInterop",
+    "init-blog": "node dist/scripts/init-blog-posts.js",
+    "build": "nuxt build --dotenv .env.prod",
+    "dev": "nuxt dev --dotenv .env.dev",
     "generate": "nuxt generate",
-    "preview": "nuxt preview",
+    "preview": "nuxt preview --dotenv .env.prod",
     "lint": "eslint . --fix",
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
     "@ant-design-vue/nuxt": "^1.4.6",
     "@nuxtjs/fontaine": "^0.5.0",
+    "@pinia/nuxt": "^0.11.1",
     "@unocss/nuxt": "^66.2.3",
     "@unocss/preset-wind4": "^66.2.3",
     "@vueuse/core": "^13.4.0",
     "@vueuse/nuxt": "^13.4.0",
     "ant-design-vue": "^4.2.6",
+    "better-sqlite3": "^12.2.0",
+    "jsonwebtoken": "^9.0.2",
     "less": "^4.3.0",
+    "lodash-es": "^4.17.21",
     "nuxt": "^3.17.5",
+    "pinia": "^3.0.3",
     "unocss": "^66.2.3",
     "unstorage": "^1.16.0",
-    "vue": "^3.5.16",
-    "vue-router": "^4.5.1"
+    "vue": "3.6.0-alpha.1",
+    "vue-router": "^4.5.1",
+    "zod": "^4.0.5"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.16.1",
     "@nuxt/devtools": "^2.5.0",
+    "@types/better-sqlite3": "^7.6.13",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/lodash-es": "^4.17.12",
+    "@types/node": "^24.0.13",
     "eslint": "^9.29.0",
-    "less-loader": "^12.3.0"
+    "less-loader": "^12.3.0",
+    "nuxt-lodash": "^2.5.3",
+    "ts-node": "^10.9.2"
   }
 }
