--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "build:scripts": "tsc scripts/*.ts --outDir dist/scripts --esModuleInterop",
-    "init-blog": "node dist/scripts/init-blog-posts.js",
     "build": "nuxt build --dotenv .env.prod",
     "dev": "nuxt dev --dotenv .env.dev",
-    "generate": "nuxt generate",
+    "generate": "nuxt generate --dotenv .env.prod",
     "preview": "nuxt preview --dotenv .env.prod",
+    "test": "vitest",
     "lint": "eslint . --fix",
     "postinstall": "nuxt prepare"
   },
@@ -36,13 +35,19 @@
   "devDependencies": {
     "@antfu/eslint-config": "^4.16.1",
     "@nuxt/devtools": "^2.5.0",
+    "@nuxt/test-utils": "^3.19.2",
+    "@pinia/testing": "^1.0.2",
     "@types/better-sqlite3": "^7.6.13",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^24.0.13",
+    "@vue/test-utils": "^2.4.6",
     "eslint": "^9.29.0",
+    "happy-dom": "^18.0.1",
     "less-loader": "^12.3.0",
     "nuxt-lodash": "^2.5.3",
-    "ts-node": "^10.9.2"
+    "playwright-core": "^1.54.1",
+    "ts-node": "^10.9.2",
+    "vitest": "^3.2.4"
   }
 }
