--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^4.16.1",
     "@nuxt/devtools": "^2.5.0",
+    "@nuxt/eslint": "^1.5.2",
     "@nuxt/test-utils": "^3.19.2",
     "@pinia/testing": "^1.0.2",
     "@types/better-sqlite3": "^7.6.13",
