--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@nuxt/eslint": "^1.5.2",
     "@nuxt/test-utils": "^3.19.2",
     "@pinia/testing": "^1.0.2",
+    "@sidebase/nuxt-auth": "^1.0.0",
     "@types/better-sqlite3": "^7.6.13",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/lodash-es": "^4.17.12",
@@ -46,6 +47,7 @@
     "eslint": "^9.29.0",
     "happy-dom": "^18.0.1",
     "less-loader": "^12.3.0",
+    "nuxt-auth-utils": "^0.5.20",
     "nuxt-lodash": "^2.5.3",
     "playwright-core": "^1.54.1",
     "ts-node": "^10.9.2",
